ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2/input.ts.stderr
error[1005]: Expected a statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2/input.ts:7:1
  |
7 | )
  | ^

